--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -1,4 +1,5 @@
-name: 'Terraform #Nome da Pipeline  
+name: Deploy Infrastructure
+
 on:
   push:
     branches:
@@ -6,7 +7,7 @@ on:
   pull_request:
 jobs:
   terraform:
-    name: 'Terraform'
+    name: Deploy Site
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
