--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -3,8 +3,9 @@ name: 'Deploy Infrastructure'
 on:
   push:
     branches:
-      - main
+      ["main"]
   pull_request:
+
 jobs:
   terraform:
     name: 'Deploy Site'
@@ -19,18 +20,17 @@ jobs:
       - name: Terraform Format
         id: fmt
         run: terraform fmt -check
+      
       - name: Terraform Init
         id: init
         run: terraform init
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
- 
-          
+     
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
- 
      
       - name: Terraform Plan
         id: plan
@@ -40,6 +40,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: terraform plan -no-color -input=false
         continue-on-error: true
+ 
       - name: Update Pull Request
         uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
@@ -64,9 +65,11 @@ jobs:
             repo: context.repo.repo,
             body: output
             })
+ 
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
         run: exit 1
+ 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         env:
